@@ -4,6 +4,7 @@ X-editable changelog
 
 Version 1.1.2 wip
 ----------------------------   
+[bug #34] inputclass span* broken with fluid layout. Changed to input-*. (vitalets) 
 [enh] utils now added to $.fn.editableutils instead of $.fn.editableform.utils (vitalets)
 [enh] input types now added to $.fn.editabletypes instead of $.fn.editableform.types (vitalets)
 [enh] playground and tests now use requirejs (vitalets)  
